uncomment other verison tests

--- a/.github/workflows/development.yaml
+++ b/.github/workflows/development.yaml
@@ -132,51 +132,51 @@ jobs:
             py_ver: 3.10
             platform: linux/amd64
             package_manager: apk
-          # - distro: alpine
-          #   conda_ver: 4.10.3
-          #   py_ver: 3.9
-          #   platform: linux/amd64
-          #   package_manager: apk
-          # - distro: alpine
-          #   conda_ver: 4.10.3
-          #   py_ver: 3.8
-          #   platform: linux/amd64
-          #   package_manager: apk
-          # - distro: alpine
-          #   conda_ver: 4.10.3
-          #   py_ver: 3.7
-          #   platform: linux/amd64
-          #   package_manager: apk
-          # - distro: alpine
-          #   conda_ver: 4.5.4
-          #   py_ver: 3.6
-          #   platform: linux/amd64
-          #   package_manager: apk
+          - distro: alpine
+            conda_ver: 4.10.3
+            py_ver: 3.9
+            platform: linux/amd64
+            package_manager: apk
+          - distro: alpine
+            conda_ver: 4.10.3
+            py_ver: 3.8
+            platform: linux/amd64
+            package_manager: apk
+          - distro: alpine
+            conda_ver: 4.10.3
+            py_ver: 3.7
+            platform: linux/amd64
+            package_manager: apk
+          - distro: alpine
+            conda_ver: 4.5.4
+            py_ver: 3.6
+            platform: linux/amd64
+            package_manager: apk
           - distro: debian
             conda_ver: 4.12.0
             py_ver: 3.10
             platform: linux/amd64
             package_manager: apt
-          # - distro: debian
-          #   conda_ver: 4.10.3
-          #   py_ver: 3.9
-          #   platform: linux/amd64
-          #   package_manager: apt
-          # - distro: debian
-          #   conda_ver: 4.10.3
-          #   py_ver: 3.8
-          #   platform: linux/amd64
-          #   package_manager: apt
-          # - distro: debian
-          #   conda_ver: 4.10.3
-          #   py_ver: 3.7
-          #   platform: linux/amd64
-          #   package_manager: apt
-          # - distro: debian
-          #   conda_ver: 4.5.4
-          #   py_ver: 3.6
-          #   platform: linux/amd64
-          #   package_manager: apt
+          - distro: debian
+            conda_ver: 4.10.3
+            py_ver: 3.9
+            platform: linux/amd64
+            package_manager: apt
+          - distro: debian
+            conda_ver: 4.10.3
+            py_ver: 3.8
+            platform: linux/amd64
+            package_manager: apt
+          - distro: debian
+            conda_ver: 4.10.3
+            py_ver: 3.7
+            platform: linux/amd64
+            package_manager: apt
+          - distro: debian
+            conda_ver: 4.5.4
+            py_ver: 3.6
+            platform: linux/amd64
+            package_manager: apt
           # - distro: debian
           #   conda_ver: 4.10.3
           #   py_ver: 3.9
