--- a/.github/workflows/development.yaml
+++ b/.github/workflows/development.yaml
@@ -224,7 +224,7 @@ jobs:
       github.ref == 'refs/heads/master' &&
       (
         github.repository_owner == 'datajoint' ||
-        github.repository_owner == 'vathes'
+        github.repository_owner == 'datajoint-company'
       )
     needs: test
     runs-on: ubuntu-latest
@@ -323,7 +323,7 @@ jobs:
       github.ref == 'refs/heads/master' &&
       (
         github.repository_owner == 'datajoint' ||
-        github.repository_owner == 'vathes'
+        github.repository_owner == 'datajoint-company'
       )
     runs-on: ubuntu-latest
     steps:
