--- a/.github/workflows/development.yaml
+++ b/.github/workflows/development.yaml
@@ -10,7 +10,7 @@ jobs:
         include:
           - distro: alpine
             conda_ver: 4.12.0
-            py_ver: 3.10
+            py_ver: '3.10'
             platform: linux/amd64
             py_label: py39_
             conda_md5: 4e2f31e0b2598634c80daa12e4981647
@@ -39,7 +39,7 @@ jobs:
             conda_md5: a946ea1d0c4a642ddf0c3a26a18bb16d
           - distro: debian
             conda_ver: 4.12.0
-            py_ver: 3.10
+            py_ver: '3.10'
             platform: linux/amd64
             py_label: py39_
           - distro: debian
@@ -129,7 +129,7 @@ jobs:
         include:
           - distro: alpine
             conda_ver: 4.12.0
-            py_ver: 3.10
+            py_ver: '3.10'
             platform: linux/amd64
             package_manager: apk
           - distro: alpine
@@ -154,7 +154,7 @@ jobs:
             package_manager: apk
           - distro: debian
             conda_ver: 4.12.0
-            py_ver: 3.10
+            py_ver: '3.10'
             platform: linux/amd64
             package_manager: apt
           - distro: debian
@@ -233,7 +233,7 @@ jobs:
         include:
           - distro: alpine
             conda_ver: 4.12.0
-            py_ver: 3.10
+            py_ver: '3.10'
             platform: linux/amd64
           - distro: alpine
             conda_ver: 4.10.3
@@ -253,7 +253,7 @@ jobs:
             platform: linux/amd64
           - distro: debian
             conda_ver: 4.12.0
-            py_ver: 3.10
+            py_ver: '3.10'
             platform: linux/amd64
           - distro: debian
             conda_ver: 4.10.3
