--- a/config/.env
+++ b/config/.env
@@ -1,14 +1,14 @@
 ## build
 
-CONDA_VER=4.12.0
-PY_VER='3.10'
-PY_LABEL=py39_
-CONDA_MD5=4e2f31e0b2598634c80daa12e4981647
-
-# CONDA_VER=4.10.3
-# PY_VER=3.9
+# CONDA_VER=4.12.0
+# PY_VER='3.10'
 # PY_LABEL=py39_
-# CONDA_MD5=8c69f65a4ae27fb41df0fe552b4a8a3b
+# CONDA_MD5=4e2f31e0b2598634c80daa12e4981647
+
+CONDA_VER=4.10.3
+PY_VER=3.9
+PY_LABEL=py39_
+CONDA_MD5=8c69f65a4ae27fb41df0fe552b4a8a3b
 
 # CONDA_VER=4.10.3
 # PY_VER=3.8
